// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<svg
  aria-label="Loading component..."
  class="SkeletonContainer"
  data-test-id="cf-ui-skeleton-form"
  height="100%"
  preserveAspectRatio="xMidYMid meet"
  role="img"
  width="100%"
>
  <title>
    Loading component...
  </title>
  <rect
    clip-path="url(#cf-ui-skeleton-clip-0)"
    height="100%"
    style="fill: url(#cf-ui-skeleton-clip-gradient-1);"
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clippath
      id="cf-ui-skeleton-clip-0"
    >
      <rect
        data-test-id="cf-ui-skeleton-image"
        height="70"
        rx="0"
        ry="0"
        width="70"
      />
    </clippath>
    <lineargradient
      id="cf-ui-skeleton-clip-gradient-1"
    >
      <stop
        offset="0%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          dur="2s"
          id="animation-2"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="50%"
        stop-color="#f7f9fa"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-2.begin+0.25s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="100%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-2.begin+0.5s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
    </lineargradient>
  </defs>
</svg>
`;

exports[`renders the component with a custom height 1`] = `
<svg
  aria-label="Loading component..."
  class="SkeletonContainer"
  data-test-id="cf-ui-skeleton-form"
  height="100%"
  preserveAspectRatio="xMidYMid meet"
  role="img"
  width="100%"
>
  <title>
    Loading component...
  </title>
  <rect
    clip-path="url(#cf-ui-skeleton-clip-3)"
    height="100%"
    style="fill: url(#cf-ui-skeleton-clip-gradient-4);"
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clippath
      id="cf-ui-skeleton-clip-3"
    >
      <rect
        data-test-id="cf-ui-skeleton-image"
        height="100"
        rx="0"
        ry="0"
        width="70"
      />
    </clippath>
    <lineargradient
      id="cf-ui-skeleton-clip-gradient-4"
    >
      <stop
        offset="0%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          dur="2s"
          id="animation-5"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="50%"
        stop-color="#f7f9fa"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-5.begin+0.25s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="100%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-5.begin+0.5s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
    </lineargradient>
  </defs>
</svg>
`;

exports[`renders the component with a custom width 1`] = `
<svg
  aria-label="Loading component..."
  class="SkeletonContainer"
  data-test-id="cf-ui-skeleton-form"
  height="100%"
  preserveAspectRatio="xMidYMid meet"
  role="img"
  width="100%"
>
  <title>
    Loading component...
  </title>
  <rect
    clip-path="url(#cf-ui-skeleton-clip-6)"
    height="100%"
    style="fill: url(#cf-ui-skeleton-clip-gradient-7);"
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clippath
      id="cf-ui-skeleton-clip-6"
    >
      <rect
        data-test-id="cf-ui-skeleton-image"
        height="70"
        rx="0"
        ry="0"
        width="100"
      />
    </clippath>
    <lineargradient
      id="cf-ui-skeleton-clip-gradient-7"
    >
      <stop
        offset="0%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          dur="2s"
          id="animation-8"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="50%"
        stop-color="#f7f9fa"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-8.begin+0.25s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="100%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-8.begin+0.5s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
    </lineargradient>
  </defs>
</svg>
`;

exports[`renders the component with a radius x 1`] = `
<svg
  aria-label="Loading component..."
  class="SkeletonContainer"
  data-test-id="cf-ui-skeleton-form"
  height="100%"
  preserveAspectRatio="xMidYMid meet"
  role="img"
  width="100%"
>
  <title>
    Loading component...
  </title>
  <rect
    clip-path="url(#cf-ui-skeleton-clip-15)"
    height="100%"
    style="fill: url(#cf-ui-skeleton-clip-gradient-16);"
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clippath
      id="cf-ui-skeleton-clip-15"
    >
      <rect
        data-test-id="cf-ui-skeleton-image"
        height="70"
        rx="15"
        ry="0"
        width="70"
      />
    </clippath>
    <lineargradient
      id="cf-ui-skeleton-clip-gradient-16"
    >
      <stop
        offset="0%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          dur="2s"
          id="animation-17"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="50%"
        stop-color="#f7f9fa"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-17.begin+0.25s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="100%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-17.begin+0.5s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
    </lineargradient>
  </defs>
</svg>
`;

exports[`renders the component with a radius y 1`] = `
<svg
  aria-label="Loading component..."
  class="SkeletonContainer"
  data-test-id="cf-ui-skeleton-form"
  height="100%"
  preserveAspectRatio="xMidYMid meet"
  role="img"
  width="100%"
>
  <title>
    Loading component...
  </title>
  <rect
    clip-path="url(#cf-ui-skeleton-clip-18)"
    height="100%"
    style="fill: url(#cf-ui-skeleton-clip-gradient-19);"
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clippath
      id="cf-ui-skeleton-clip-18"
    >
      <rect
        data-test-id="cf-ui-skeleton-image"
        height="70"
        rx="0"
        ry="15"
        width="70"
      />
    </clippath>
    <lineargradient
      id="cf-ui-skeleton-clip-gradient-19"
    >
      <stop
        offset="0%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          dur="2s"
          id="animation-20"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="50%"
        stop-color="#f7f9fa"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-20.begin+0.25s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="100%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-20.begin+0.5s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
    </lineargradient>
  </defs>
</svg>
`;

exports[`renders the component with an offset left 1`] = `
<svg
  aria-label="Loading component..."
  class="SkeletonContainer"
  data-test-id="cf-ui-skeleton-form"
  height="100%"
  preserveAspectRatio="xMidYMid meet"
  role="img"
  width="100%"
>
  <title>
    Loading component...
  </title>
  <rect
    clip-path="url(#cf-ui-skeleton-clip-12)"
    height="100%"
    style="fill: url(#cf-ui-skeleton-clip-gradient-13);"
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clippath
      id="cf-ui-skeleton-clip-12"
    >
      <rect
        data-test-id="cf-ui-skeleton-image"
        height="70"
        rx="0"
        ry="0"
        width="70"
        x="100"
      />
    </clippath>
    <lineargradient
      id="cf-ui-skeleton-clip-gradient-13"
    >
      <stop
        offset="0%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          dur="2s"
          id="animation-14"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="50%"
        stop-color="#f7f9fa"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-14.begin+0.25s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="100%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-14.begin+0.5s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
    </lineargradient>
  </defs>
</svg>
`;

exports[`renders the component with an offset top 1`] = `
<svg
  aria-label="Loading component..."
  class="SkeletonContainer"
  data-test-id="cf-ui-skeleton-form"
  height="100%"
  preserveAspectRatio="xMidYMid meet"
  role="img"
  width="100%"
>
  <title>
    Loading component...
  </title>
  <rect
    clip-path="url(#cf-ui-skeleton-clip-9)"
    height="100%"
    style="fill: url(#cf-ui-skeleton-clip-gradient-10);"
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clippath
      id="cf-ui-skeleton-clip-9"
    >
      <rect
        data-test-id="cf-ui-skeleton-image"
        height="70"
        rx="0"
        ry="0"
        width="70"
        y="100"
      />
    </clippath>
    <lineargradient
      id="cf-ui-skeleton-clip-gradient-10"
    >
      <stop
        offset="0%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          dur="2s"
          id="animation-11"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="50%"
        stop-color="#f7f9fa"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-11.begin+0.25s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
      <stop
        offset="100%"
        stop-color="#e5ebed"
        stop-opacity="1"
      >
        <animate
          attributeName="stop-color"
          begin="animation-11.begin+0.5s"
          dur="2s"
          repeatCount="indefinite"
          values="#e5ebed; #f7f9fa; #e5ebed"
        />
      </stop>
    </lineargradient>
  </defs>
</svg>
`;
